Fix card spacing

--- a/src/app.css
+++ b/src/app.css
@@ -74,6 +74,10 @@
   display: inline;
 }
 
+.hit-description {
+  margin-top: 10%;
+}
+
 .hit-mana {
   float: right;
   margin-top: 0.3em;
@@ -81,17 +85,30 @@
 
 .hit-content {
   display: flex;
-  height: 600px;
+  height: 550px;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.hit-text {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
+
+/* .hit-flavor-text {
+
+  display: flex;
+  flex-direction: column;
+}  */
 
 .invisible {
   display: none;
 }
 
 .hit-stats {
-  text-align: right;
+  align-self: flex-end;
 }
 
 .hit-image {
@@ -144,7 +161,15 @@ body {
 
 .ais-Hits-item {
   background-color: whitesmoke;
-  box-shadow: 3px 3px 3px 2px
+  box-shadow: 3px 3px 3px 2px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.right-panel > img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  display: block;
 }
 
 /* .img-container {
